# tfg-video-segmentation

./: .gitignore  CMakeLists.txt  LICENSE  README.md
data/bear/: images.txt  rtImages.txt
data/bear/seeds/: seeds.txt  seedsDavis.txt
data/bmx-bumps/: images.txt  rtImages.txt
data/bmx-bumps/seeds/: seeds.txt  seedsDavis.txt
data/girl/: images.txt
data/hike/: images.txt  rtImages.txt
data/hike/seeds/: seeds.txt  seedsDavis.txt
data/schoolgirls/: images.txt
data/schoolgirls/seeds/: seeds.txt  seedsDavis.txt
demos/: demo_faktor.sh  demo_naveen.sh  demo_szeliski.sh
scripts/: computeShrunkFlows.sh  compute_shrunk_flows.sh  denseTracking.sh  dense_tracking.sh  densifyMaerki.sh  densify_maerki.sh  list_flows.py  list_images.py  segmentFaktor.sh  segmentMaerki.sh  segmentOnArrival.sh  segment_faktor.sh  segment_on_arrival.sh  trackSegmentNaveen.sh  trackSegmentSzeliski.sh  track_segment_naveen.sh  track_segment_szeliski.sh
src/: Homography.cpp  Homography.h  ImageUtils.cpp  ImageUtils.h  Mapping.cpp  Mapping.h  MotionModel.cpp  MotionModel.h  RandomWalker.cpp  RandomWalker.h  Track.cpp  Track.h  TrackTable.cpp  TrackTable.h  src_motion_model.cpp  src_random_walker.cpp
src/bgmm/: CMakeLists.txt  Homography.cpp  Homography.h  MotionModel.cpp  MotionModel.h  bgmm.cpp
src/bgmotionmodel/: Homography.cpp  Homography.h  MotionModel.cpp  MotionModel.h  src_motion_model.cpp
src/bilateralvidseg/: Grid.cpp  Grid.h  src_bilateral_vidseg.cpp
src/bvs/: CMakeLists.txt  Grid.cpp  Grid.h  bvs.cpp
src/consensusvoting/: ConsensusVoter.cpp  ConsensusVoter.h  Region.cpp  Region.h  RegionList.cpp  RegionList.h  src_consensus_voting.cpp
src/flow/: CMakeLists.txt  optical_flow_dis.cpp
src/nlcv/: CMakeLists.txt  ConsensusVoter.cpp  ConsensusVoter.h  Region.cpp  Region.h  nlcv.cpp
src/random-walking/: CMakeLists.txt  RandomWalker.cpp  RandomWalker.h  random_walk.cpp
src/randomwalker/: RandomWalker.cpp  RandomWalker.h  src_random_walker.cpp
src/tracks/: CMakeLists.txt  Mapping.cpp  Mapping.h  Track.cpp  Track.h  TrackTable.cpp  TrackTable.h  Tracking.cpp  Tracking.h  continue_tracks.cpp  src_continue_tracks.cpp
src/utils/: CMakeLists.txt  CmdParser.cpp  CmdParser.h  ImageUtils.cpp  ImageUtils.h  IoUtils.cpp  IoUtils.h
test/framelists/: bear.txt  bmx-bumps.txt  hike.txt  schoolgirls.txt
test/seedlists/: bear.txt  bmx-bumps.txt  hike.txt  schoolgirls.txt
test/tracks/: bear.txt  bear3.txt  bear82.txt  bmx-bumps.txt  bmx-bumps3.txt  bmx-bumps31.txt  bmx-bumps90.txt  cars.txt  hike.txt  hike2.txt  schoolgirls.txt
test/weights/: bear.txt  bmx-bumps.txt  cars.txt  hike.txt  hike2.txt
